name:                streams-in-space
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/streams-in-space#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable game
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Game,
                       Vec,
                       Stream,
                       Physics,
                       Configs
  default-language:    Haskell2010
  default-extensions:  MultiParamTypeClasses,
                       FlexibleInstances,
                       FunctionalDependencies,
                       LambdaCase,
                       FlexibleContexts,
                       DeriveFunctor
  build-depends:       base >= 4.7 && < 5,
                       gloss,
                       containers,
                       linear,
                       comonad
